--- a/Auth0WebApp/appsettings.json
+++ b/Auth0WebApp/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Warning"
     }
   },
+  "Auth0": {
+    "Domain": "",
+    "ClientId": "",
+    "ClientSecret": ""
+  },
   "AllowedHosts": "*"
 }
