--- a/Auth0WebApp/appsettings.Development.json
+++ b/Auth0WebApp/appsettings.Development.json
@@ -5,5 +5,10 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Auth0": {
+    "Domain": "",
+    "ClientId": "",
+    "ClientSecret": ""
   }
 }
