completed AzureADB2C sample app

--- a/AzureADB2CWebApp/appsettings.json
+++ b/AzureADB2CWebApp/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Warning"
     }
   },
+  "AzureADB2c": {
+    "Domain": "",
+    "ClientId": "",
+    "ClientSecret": "",
+    "MetadataAddress": ""
+  },
   "AllowedHosts": "*"
 }
